# elgato-keylight-controller

./: .gitignore  README.md  config.yaml.sample  pyproject.toml
src/elgato_keylight_controller/: config.py  controller.py  hotkeys.py  main.py
